# HRMS-System

./: PROJECT_CONTEXT.md
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  schema_migrations.sql  test_drift.db
backend/alembic/: README.md  env.py
backend/alembic/versions/: 0001_employee_management.py  0002_shift_management.py  0003_leave_holiday_management.py  0004_approval_requests.py  0005_payroll.py  0006_settlements.py  0007_user_management_rbac.py  0008_resolve_deferred_user_fks.py  0009_standardize_bigint_pks.py  0010_activity_log.py  0011_settings.py  0012_hardware_biometric_devices.py  0013_resolve_deferred_device_fks.py  0014_notifications.py  0015_attendance_core.py  0016_resolve_remaining_deferred_fks.py  0016_resolve_remaining_fks.py  0017_employee_settlement_state.py  0018_fk_supporting_indexes.py  0019_user_org_memberships.py  0020_create_attendance_locks.py  0021_holiday_templates_ci_unique_index.py
backend/app/: main.py
backend/app/api/: router.py
backend/app/core/: health.py
backend/app/exceptions/: leave.py
backend/app/jobs/: queue.py  scheduler.py  tasks.py  worker.py
backend/app/modules/: README.md
backend/docs/: Activity_Log_Audit_Management_API_Contract.md  Approval_Management_API_Contract.md  Attendance_Management_API_Contract.md  Authentication_API_Contract.md  Dashboard_API_Contract.md  Employee_Management_API_Contract.md  Hardware_Biometric_Management_API_Contract.md  Leave_Management_API_Contract.md  Notification_Management_API_Contract.md  Payroll_Management_API_Contract.md  Reports_API_Contract.md  Settings_Management_API_Contract.md  Settlement_Management_API_Contract.md  Shift_Management_API_Contract.md  User_Management_RBAC_API_Contract.md  architecture.md  environment.md  operations.md
backend/docs/qa/: PHASE7-execution-report.md  README.md  test-cases-auth-rbac-org.md  test-cases-cross-cutting.md  test-cases-employee-shift-attendance.md  test-cases-hardware-notif-settings-audit-dashboard-reports.md  test-cases-leave-approval-payroll-settlement.md
backend/scripts/: backup.sh  restore.sh  seed_branch_wise_punch.py  seed_dashboard.py  seed_login.py
backend/tests/: conftest.py
backend/tests/integration/: test_adms_router.py  test_approval_router.py  test_attendance_router.py  test_auth_router.py  test_branch_router.py  test_dashboard_router.py  test_department_router.py  test_designation_router.py  test_employee_router.py  test_hardware_router.py  test_jobs_router.py  test_notification_router.py  test_org_switching_verification.py  test_payroll_router.py  test_rbac_router.py  test_redis_startup_integration.py  test_reports_router.py  test_settings_router.py  test_settlement_router.py  test_shift_router.py
backend/tests/unit/: test_adms.py  test_approval_service.py  test_attendance_service.py  test_auth_rate_limit.py  test_auth_schemas.py  test_auth_security.py  test_auth_service.py  test_bulk_attendance_adjustments.py  test_cache_resilience.py  test_dashboard_repository.py  test_dashboard_schemas.py  test_dashboard_service.py  test_department_service.py  test_designation_service.py  test_employee_schemas.py  test_employee_service.py  test_finalized_payroll.py  test_hardware_schemas.py  (+30 more)
(+514 files in other folders)
