[project]
name = "hrms-backend"
version = "0.1.0"
description = "Enterprise HRMS backend (FastAPI, PostgreSQL, modular monolith)"
requires-python = ">=3.11"
readme = "README.md"

dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "sqlalchemy[asyncio]",
    "alembic",
    "asyncpg",
    "psycopg2-binary",
    "pydantic",
    "pydantic-settings",
    "python-jose[cryptography]",
    # passlib 1.7.4 probes the bcrypt backend with a 73-byte password. bcrypt >= 5
    # raises ValueError instead of truncating, which makes every hash_password()
    # call fail; bcrypt >= 4.1 removed __about__, which passlib logs as a trapped
    # error on import. Pin to the last release that is clean on both counts.
    "passlib[bcrypt]==1.7.4",
    "bcrypt>=4.0,<4.1",
    "redis",
    "python-multipart",
    "jinja2",
    "httpx",
    "structlog",
    "websockets",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
    "httpx",
    "faker",
    "ruff",
    "black",
    "mypy",
    "pre-commit",
]

# NOTE: background-job library (e.g. arq or celery) is intentionally left as a
# decision point — see docs/architecture.md. The jobs/ package is queue-agnostic.

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

# The repo root holds several top-level directories (app, tests, alembic, scripts,
# docs, var). Setuptools' flat-layout auto-discovery refuses to guess between them
# and aborts, so name the distributed package explicitly.
[tool.setuptools.packages.find]
include = ["app*"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "C4"]

[tool.mypy]
python_version = "3.11"
warn_unused_ignores = true
disallow_untyped_defs = true
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
